fixed the stretched image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
 body {
     background-color: black;
 }
-canvas {
-    width: 1024px;
-    height: 576px;
-}
